2013-08-29  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.2 patch release.

	* Updating the version for the latest patch, and being more
	pessimistic about Boost compatibility: assuming that Boost 1.49 is
	the oldest compatible release until we hear otherwise.

	* Reworking the validation system to use 0 rather than 21 for the
	gluon ID (a simplification due to v5/v6 compatibility) and to
	allow building of top PDF validation plots.

	* Removing builds of examples and tests directories from the
	top-level default make target.

2013-08-29  James Ferrando  <james.ferrando@cern.ch>

	* Fix some reference-type arguments in 'Fortran' functions to be const.

	* LHAGlue.h, LHAGlue.cpp: Fortran backwards compatibility routines
	for FEWZ 3.1, and a fix to the C++ backwards compatibility
	routines for getting min and max x and Q2.

2013-08-28  Andy Buckley  <andy.buckley@cern.ch>

	* Removing necessity of Cython for tarball builds.

2013-08-16  Karl Nordstrom

	* Adding log-Q gradient extrapolation in AlphaS_Ipol.

2013-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.1 patch release.

	* Disabling installation of the not-to-be-used 'sets' directory.

2013-08-11  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing an off-by-one error in alpha_s subgrid array creation.

2013-08-08 James Ferrando  <james.ferrando@cern.ch>

	* Added several backwards-compatibility updates for fortran and
	C++ interfaces based on 6.0.0 feedback from David Hall and Marek
	Schoenherr.

2013-08-07  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.0 release!

2013-08-06  Andy Buckley  <andy.buckley@cern.ch>

	* Various remaining build system tweaks and updating the version
	code to 6.0.0rc in anticipation of release!

	* Added the lhaglue_get_current_pdf(nset=1) function for C++
	access to the currently-used PDF via LHAGlue (intended as a
	workaround for cases where the old LHAPDF banner was grepped to
	work out the PDF identities).

2013-08-05  Andy Buckley  <andy.buckley@cern.ch>
